[package]
name = "hxn"
version = "0.1.7"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "Blazingly fast tool to grab screenshots of url/webpages from terminal."
readme = "README.md"
repository = "https://github.com/pwnwriter/haylxon"
homepage = "https://github.com/pwnwriter/haylxon.git"
license = "MIT"
keywords = ["screenshots", "bug-bounty", "recon", "pwn", "OSINT" ]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.1"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
chromiumoxide = {  version = "0.5.3", features = ["tokio-runtime"], default-features = false }
futures = "0.3.28"
clap = { version = "4.4.6", features = ["derive", "string"] }
columns = "0.1.0"
colored = "2.0.4"
anyhow = "1.0.75"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
