[package]
name = "hxn"
version = "1.0.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "Blazingly fast tool to grab screenshots of url/webpages from terminal."
readme = "README.md"
repository = "https://github.com/pwnwriter/haylxon"
homepage = "https://github.com/pwnwriter/haylxon.git"
license = "MIT"
keywords = ["screenshots", "bug-bounty", "recon", "pwn", "OSINT" ]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = {  version = "0.6.0", features = ["tokio-runtime"], default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "trust-dns"] }
clap = { version = "4.5.6", features = ["derive", "string"] }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
columns = "0.1.0"
colored = "2.0.4"
anyhow = "1.0.86"
url = "2.5.2"
regex = "1.10"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
