[package]
name = "hxn"
version = "1.1.0"
edition = "2021"
authors = [ "PwnWriter < hi@pwnwriter.me >" ]
description = "Blazingly fast tool to grab screenshots of url/webpages from terminal."
readme = "README.md"
repository = "https://github.com/pwnwriter/haylxon"
homepage = "https://github.com/pwnwriter/haylxon.git"
license = "MIT"
keywords = ["screenshot", "recon", "bug-bounty", "osint", "automation"]
categories = ["command-line-utilities", "web-programming", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = {  version = "0.6.0", features = ["tokio-runtime"], default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "trust-dns", "socks"] }
clap = { version = "4.5.8", features = ["derive", "string"] }
tokio = { version = "1.38.1", features = ["full"] }
futures = "0.3.30"
tabled = { version = "0.17", features = ["ansi"] }
colored = "3.1.1"
miette = { version = "7", features = ["fancy"] }
url = "2.5.2"
indicatif = "0.17"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
